<resources>
    <string name="app_name">Upkaar</string>
    <string name="created_with">Made with</string>

    <!-- Onboarding -->
    <string name="first_slide_title">LET US COME TOGETHER</string>
    <string name="second_slide_title">LET\'S DONATE</string>
    <string name="third_slide_title">IT\'S JUST A CLICK AWAY</string>
    <string name="fourth_slide_title">SEND A BLESSING</string>

    <string name="first_slide_desc">To help each other get through this hard time</string>
    <string name="second_slide_desc">So that no one runs out of basic necessities</string>
    <string name="third_slide_desc">For you to be connected to the rest of India</string>
    <string name="fourth_slide_desc">Through the portals of Upkaar</string>

    <!-- Buttons -->
    <string name="skip_btn">Skip</string>
    <string name="get_started">Get Started</string>

    <!-- Login -->
    <string name="login">Hello There, Welcome Back</string>
    <string name="signIn">Sign In To Continue</string>
    <string name="placeholder_user">Email</string>
    <string name="placeholder_pass">Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="submit">GO</string>
    <string name="new_user">New User? SIGN UP</string>

    <!-- SignUp -->
    <string name="welcome">Welcome Aboard!!</string>
    <string name="signUp">Sign Up to make a positive impact</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="haveAcc">AlREADY HAVE AN ACCOUNT?LOGIN</string>
    <string name="name">Username</string>


    <!-- Home -->
    <string name="home_title">Donate for the needy!</string>
    <string name="home_slogan">Let\'s fight this together</string>
    <string name="categories"><u>Categories</u></string>


    <!-- Food Donation Form -->

    <string name="fill_form">Please enter the details</string>
    <string name="donator_s_name">Name</string>
    <string name="donator_s_ph">Phone number</string>
    <string name="donator_s_address">Address</string>
    <string name="donator_s_comments">Comments</string>
    <string name="Food_quote">Donation Form</string>
    <string name="donation_details"><u>Donation particulars</u></string>
    <string name="donation_food_name">Name of item</string>
    <string name="donation_food_type">Type of item</string>
    <string name="gratitude">You have successfully donated! We will pick the donation package from you, soon.<br>Stay Home!Stay Safe!</br> </string>

    <!-- Book Donation form -->
    <string name="book_name">Name of Book</string>
    <string name="book_author_name">Name of Author</string>
    <string name="book_type">Type of Book(story, poem, novel etc)</string>

    <!-- Games donation form -->
    <string name="game_name">Name of Game</string>
    <string name="game_type">Type of Game(Board, Card, Puzzle, etc)</string>


</resources>
